--- a/BooksApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/BooksApp/app/src/main/res/layout/activity_sign_up.xml
@@ -76,7 +76,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextPassword"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/purple_200"
         android:text="Sign Up">
 
