--- a/BooksApp/app/src/main/res/layout/activity_main.xml
+++ b/BooksApp/app/src/main/res/layout/activity_main.xml
@@ -55,14 +55,18 @@
 
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/loginButton"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
-        android:id="@+id/loginButton"
-        android:backgroundTint="@color/purple_200"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
-        android:text="Sign In"
-        android:layout_margin="20dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="Sign In">
+
     </com.google.android.material.button.MaterialButton>
 
     <TextView
@@ -96,7 +100,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/signupText"
+        android:id="@+id/text1"
         android:text="Haven't registered yet ? Sign up"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
@@ -106,26 +110,11 @@
 
     </com.google.android.material.textfield.TextInputEditText>
 
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/signUPButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signupText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/purple_200"
-        android:text="Sign UP">
-
-    </com.google.android.material.button.MaterialButtonToggleGroup>
-
     <Button
         android:id="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signupText"
+        android:layout_below="@id/text1"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
