--- a/BooksApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/BooksApp/app/src/main/res/layout/activity_sign_up.xml
@@ -71,7 +71,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/signup"
+        android:id="@+id/signupBtn"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextPassword"
