--- a/BooksApp/app/src/main/res/layout/fragment_profile.xml
+++ b/BooksApp/app/src/main/res/layout/fragment_profile.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav_bar.home.HomeFragment"
-    android:labelFor="@id/text_home">
+    tools:context=".nav_bar.profile.ProfileFragment">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -20,7 +19,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
