--- a/BooksApp/app/src/main/res/layout/activity_chem.xml
+++ b/BooksApp/app/src/main/res/layout/activity_chem.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lilac">
-    <TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/lilac"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="4dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="16dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text ="Chemistry books">
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text ="Chemistry books">
+        </TextView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </TextView>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
