--- a/BooksApp/app/src/main/res/layout/fragment_search.xml
+++ b/BooksApp/app/src/main/res/layout/fragment_search.xml
@@ -12,49 +12,64 @@
         tools:context=".nav_bar.search.SearchFragment">
 
 
+        <ImageButton
+            android:id="@+id/backBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="85dp"
+            android:src="@drawable/back_arrow"
+            app:layout_constraintEnd_toStartOf="@+id/title"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </ImageButton>
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Categories"
+            android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButtonChem"
-            android:layout_width="284dp"
-            android:layout_height="264dp"
+            android:id="@+id/imageButtonPhy"
+            android:layout_width="254dp"
+            android:layout_height="233dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/chem"
+            android:src="@drawable/physics"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <ImageButton
-            android:id="@+id/imageButtonPhy"
-            android:layout_width="295dp"
-            android:layout_height="313dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/physics"
+            android:id="@+id/imageButtonChem"
+            android:layout_width="250dp"
+            android:layout_height="230dp"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/chem"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageButtonPhy" />
+
+
+        <ImageButton
+            android:id="@+id/imageButtonBio"
+            android:layout_width="254dp"
+            android:layout_height="233dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/biology"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButtonChem" />
 
         <ImageButton
-            android:id="@+id/imageButtonBio"
-            android:layout_width="292dp"
-            android:layout_height="321dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/biology"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButtonPhy" />
-
-        <ImageButton
             android:id="@+id/imageButtonMath"
-            android:layout_width="286dp"
-            android:layout_height="277dp"
+            android:layout_width="250dp"
+            android:layout_height="236dp"
             android:layout_marginTop="20dp"
             android:src="@drawable/math"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,11 +77,11 @@
             app:layout_constraintTop_toBottomOf="@+id/imageButtonBio" />
 
         <ImageButton
-            android:id="@+id/imageButtonPython"
-            android:layout_width="286dp"
-            android:layout_height="290dp"
+            android:id="@+id/imageButtonComp"
+            android:layout_width="261dp"
+            android:layout_height="231dp"
             android:layout_marginTop="26dp"
-            android:src="@drawable/python"
+            android:src="@drawable/comp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageButtonMath" />
