--- a/BooksApp/app/src/main/res/values-night/themes.xml
+++ b/BooksApp/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.BooksApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/skyBlue</item>
-        <item name="colorPrimaryVariant">@color/oceanBlue</item>
+        <item name="colorPrimary">@color/lilac2</item>
+        <item name="colorPrimaryVariant">@color/magenta</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -16,7 +16,7 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="AppTheme.ActionBar" parent="Widget.AppCompat.Light.ActionBar">
-        <item name="background">@color/skyBlue</item>
+        <item name="background">@color/magenta</item>
         <item name="android:height">150dp</item>
         <item name="height">60dp</item>
     </style>
