--- a/BooksApp/app/src/main/res/layout/activity_donor.xml
+++ b/BooksApp/app/src/main/res/layout/activity_donor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/bg_color">
+    android:background="@color/lilac">
 
     <TextView
         android:id="@+id/textView"
