--- a/BooksApp/app/src/main/res/values-night/themes.xml
+++ b/BooksApp/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BooksApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BooksApp" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/lilac2</item>
         <item name="colorPrimaryVariant">@color/magenta</item>
