--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,13 +48,13 @@
         app:layout_anchor="@id/bottomAppBar"
         app:backgroundTint="#B744B8"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--<androidx.recyclerview.widget.RecyclerView
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:id="@+id/recyclerview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />!-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
