--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
     android:paddingTop="16dp"
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
-    android:background="#cec4ff"
+    android:background="@drawable/login_pg"
     android:gravity="bottom">
+
+    <ImageButton
+        android:id="@+id/backBtn"
+        android:layout_width="34dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:srcCompat="@drawable/back_arrow" />
 
     <EditText
         android:id="@+id/editTextEmailAddress"
@@ -68,7 +75,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="#ab86b3"
+        android:backgroundTint="@color/DarkSecondary"
         android:text="Login"
         android:textColor="@color/white">
 
@@ -87,13 +94,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/social"
-        android:layout_width="121dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
         android:layout_below="@+id/textViewSocial"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="136dp"
         android:layout_marginBottom="40dp"
         android:orientation="horizontal">
 
@@ -116,7 +124,7 @@
             android:layout_height="39dp"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="50dp"
-            android:background="@drawable/facebook"
+            android:background="@drawable/google"
             app:layout_constraintEnd_toStartOf="@+id/insta"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -127,12 +135,13 @@
 
         <ImageButton
             android:id="@+id/insta"
-            android:layout_width="41dp"
-            android:layout_height="43dp"
-            android:background="@drawable/instagram"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/google"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toEndOf="@id/facebook"
-            tools:layout_editor_absoluteY="-4dp">
+            app:layout_constraintStart_toEndOf="@id/facebook">
 
         </ImageButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -150,7 +159,8 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/text1"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="\nDon't have an account?"
             android:textColor="@color/black">
 
@@ -163,10 +173,12 @@
             android:layout_marginStart="@dimen/activity_vertical_margin"
             android:layout_marginLeft="7dp"
             android:layout_toRightOf="@id/text1"
-            android:backgroundTint="#ab86b3"
+            android:backgroundTint="@color/DarkSecondary"
             android:singleLine="true"
             android:text="Sign Up"
             android:textColor="@color/white" />
     </RelativeLayout>
+
+
 
 </RelativeLayout>
