--- a/app/src/main/res/layout/activity_donor.xml
+++ b/app/src/main/res/layout/activity_donor.xml
@@ -5,46 +5,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/lilac">
+    android:background="@color/bgColor2">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/profileHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="serif"
         android:text="Donor Profile"
         android:textColor="@color/black"
-        android:textSize="26dp"
+        android:textSize="15dp"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/et_donorID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/profileHeading"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/rounded_corners"
+        android:ems="10"
+        android:hint="Donor Id"
+        android:inputType="number"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profileHeading" />
+
+    <EditText
         android:id="@+id/etbookNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:hint=" Book number"
-        android:inputType="number"
+        android:layout_below="@+id/et_donorID"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corners"
+        android:ems="10"
+        android:hint=" Book ID"
+        android:inputType="number"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="#546E7A"
-        android:minHeight="48dp"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/et_donorID" />
 
     <EditText
         android:id="@+id/etbookName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corners"
         android:ems="10"
         android:hint="Book Name"
@@ -57,41 +74,58 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etbookNumber" />
 
-
-    <Button
-        android:id="@+id/btn_write_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Submit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/photoUrl" />
-
     <EditText
-        android:id="@+id/et_donor_no_read"
+        android:id="@+id/numCopies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_write_data"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corners"
         android:ems="10"
-        android:hint="Donor Id"
+        android:hint="Enter number of copies"
         android:inputType="number"
         android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="#546E7A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etbookName" />
+
+    <EditText
+        android:id="@+id/etbookCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_corners"
+        android:ems="10"
+        android:hint="Category name"
+        android:inputType="textAutoComplete"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/numCopies" />
+
+    <Button
+        android:id="@+id/btn_write_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/photoUrl" />
+
 
     <EditText
         android:id="@+id/photoUrl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_write_data"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_corners"
         android:ems="10"
         android:hint="photurl"
@@ -102,13 +136,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_donor_no_read" />
+        app:layout_constraintTop_toBottomOf="@+id/etbookCategory" />
 
     <Button
         android:id="@+id/btnReadData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
         android:layout_marginEnd="160dp"
         android:text="View details"
         app:layout_constraintEnd_toEndOf="parent"
