--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
-    android:background="@color/lilac">
+    android:background="@color/lightPrimary">
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_home"
@@ -14,17 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/bottomAppBar"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:fabCradleMargin="10dp"
-        android:backgroundTint="@color/magenta"
+        android:backgroundTint="@color/DarkSecondary"
         app:fabCradleVerticalOffset="10dp"
         app:fabCradleRoundedCornerRadius="10dp"
         android:layout_gravity="bottom">
@@ -44,9 +45,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/add_book"
-        android:backgroundTint="#B744B8"
+        android:backgroundTint="@color/DarkSecondary"
         app:layout_anchor="@id/bottomAppBar"
-        app:backgroundTint="#B744B8"/>
+        app:backgroundTint="@color/white"
+        app:useMaterialThemeColors="false"/>
+
+
+
+
 
     <!--<androidx.recyclerview.widget.RecyclerView
         android:layout_width="409dp"
