--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.BooksApp" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/lilac2</item>
-        <item name="colorPrimaryVariant">@color/magenta</item>
+        <item name="colorPrimary">@color/lightSecondary</item>
+        <item name="colorPrimaryVariant">@color/DarkPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -16,10 +16,10 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="AppTheme.ActionBar" parent="Widget.AppCompat.Light.ActionBar">
-        <item name="background">@color/magenta</item>
+        <item name="background">@color/bgColor2</item>
         <item name="android:height">150dp</item>
         <item name="height">60dp</item>
     </style>
 </resources>
-<!--<item name="android:titleTextStyle">@style/AppTheme.ActionBar.TitleText</item>
-<item name="titleTextStyle">@style/AppTheme.ActionBar.TitleText</item> !-->
+    <!--<item name="android:titleTextStyle">@style/AppTheme.ActionBar.TitleText</item>
+    <item name="titleTextStyle">@style/AppTheme.ActionBar.TitleText</item> !-->
