--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.BooksApp" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/magenta</item>
-        <item name="colorPrimaryVariant">@color/skyBlue</item>
+        <item name="colorPrimary">@color/lightSecondary</item>
+        <item name="colorPrimaryVariant">@color/DarkPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondaryVariant">@color/lightSecondary</item>
         <item name="colorOnSecondary">@color/skyBlue</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
@@ -15,7 +15,7 @@
     </style>
 
     <style name="AppTheme.ActionBar" parent="Widget.AppCompat.Light.ActionBar">
-        <item name="background">@color/skyBlue</item>
+        <item name="background">@color/bgColor2</item>
         <item name="android:height">150dp</item>
         <item name="height">60dp</item>
     </style>
